<resources>
    <string name="app_name">Auth2</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="txt_flights">Flights</string>
    <string name="txt_search">Search</string>
    <string name="txt_popular_categories">Popular Categories</string>
    <string name="txt_city_nairobi">Nairobi, NRB</string>
    <string name="txt_recommended">Recommended</string>
    <string name="txt_see_all">See all</string>
    <string name="txt_china">China</string>

    <string name="txt_hotels">Hotels</string>
    <string name="txt_visa">Visa</string>
    <string name="txt_buses">Buses</string>
    <string name="txt_restaurant">Restaurant</string>
    <string name="txt_label_1">Item 1</string>
    <string name="txt_label_2">Item 2</string>
    <string name="txt_label_3">Item 3</string>
    <string name="txt_label_4">Item 4</string>
    <string name="txt_france">France</string>
    <string name="txt_india">India</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="tag">Tag</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>

</resources>