<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_tag"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/tag"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notification"/>
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting"/>

    <item
        android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/signOutButton"
                android:icon="@drawable/baseline_login_24"
                android:title="@string/logout"/>

        </menu>

    </item>

    <item android:title="@string/communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share"/>

            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/baseline_rate_review_24"
                android:title="@string/rate_us"/>

        </menu>


    </item>

</menu>